proc-processor/src/test/resources/good/EmptyClass.java
package good;

import org.neo4j.graphalgo.annotation.Configuration;

@Configuration("EmptyClassConfig")
public interface EmptyClass {
}
