proc-processor/src/test/resources/bad/BaseClassIsNotAnInterface.java
package bad;

import org.neo4j.graphalgo.annotation.Configuration;

@Configuration("BaseClassIsNotAnInterfaceConfig")
public abstract class BaseClassIsNotAnInterface {
}
